# web-rtc-test

./: README.md  buf.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: CI.yml
deploy/: .env.example  README.md  compose.yml  deploy.yml  inventory.yml
proto/rov/streams/: pointcloud.proto  thrusters.proto  video.proto
robot/: README.md
robot/ros2_ws/: .gitignore  Dockerfile  compose.yml  pyproject.toml
robot/ros2_ws/src/camera_pkg/: package.xml  setup.cfg  setup.py
robot/ros2_ws/src/camera_pkg/camera_pkg/: synthetic_camera_node.py
robot/ros2_ws/src/cpp_subscriber_pkg/: CMakeLists.txt  package.xml
robot/ros2_ws/src/cpp_subscriber_pkg/src/: listener_node.cpp
robot/ros2_ws/src/my_interfaces/: CMakeLists.txt  package.xml
robot/ros2_ws/src/my_interfaces/msg/: Thrusters.msg
robot/ros2_ws/src/pointcloud_pkg/: package.xml  setup.cfg  setup.py
robot/ros2_ws/src/pointcloud_pkg/pointcloud_pkg/: pointcloud_node.py
robot/ros2_ws/src/robot_bringup/launch/: all_nodes.launch.py  sensors.launch.py  webrtc.launch.py  webrtc_prod.launch.py
robot/ros2_ws/src/subscriber_pkg/subscriber_pkg/: listener_node.py
robot/ros2_ws/src/thruster_pkg/: package.xml  setup.cfg  setup.py
robot/ros2_ws/src/thruster_pkg/thruster_pkg/: thruster_node.py
robot/ros2_ws/src/webrtc_streamer_pkg/: package.xml  setup.cfg  setup.py
robot/ros2_ws/src/webrtc_streamer_pkg/webrtc_streamer_pkg/: webrtc_streamer_node.py
server/: .gitignore  Dockerfile  buf.gen.yaml  next.config.ts  package-lock.json  package.json
server/src/app/: ThemeRegistry.tsx  layout.tsx  page.tsx
server/src/app/api/ice-config/: route.ts
server/src/app/api/sfu/: route.ts
server/src/app/api/signaling/: route.ts
server/src/app/api/status/: route.ts
server/src/app/api/ws/: route.ts
server/src/app/pointcloud/: page.tsx
server/src/lib/: sfuClient.ts
server/src/lib/mediasoup/: config.ts  sfu.ts
server/src/lib/webrtc/: hub.ts  iceServers.ts
