[tool.poetry]
package-mode = false

[project]
name = "ros2-example"
version = "0.1.0"
description = ""
authors = [
    {name = "Emil Djupvik",email = "emil@djupvik.dev"}
]
requires-python = ">=3.10,<4"
dependencies = [
    "rich (>=14.3.3,<15.0.0)",
    "proto4webrtc (>=0.2.1,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
