<?xml version="1.0"?>
<package format="3">
  <name>cpp_subscriber_pkg</name>
  <version>0.0.1</version>
  <description>C++ subscriber node for the /greetings topic</description>
  <maintainer email="todo@todo.com">todo</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>my_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
