<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>webrtc_streamer_pkg</name>
  <version>0.0.1</version>
  <description>Bridges ROS2 topics to the server over WebRTC (aiortc peer)</description>
  <maintainer email="emil@djupvik.dev">user</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
